py3 fuckery part 1

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,18 @@
+git+https://github.com/tBaxter/vobject
+PySocks
+dnspython3
 argparse
 gunicorn
 Django==1.6.2
 django-celery==3.1.1
 djangorestframework==2.4.3
-django-scheduler==0.7.2
+django-scheduler
 django-uuidfield==0.5.0
-twilio==3.4.1
+twilio
 Celery==3.1.9
 python-dateutil==2.2
 pyasn1
 pyasn1_modules
-dnspython
 sleekxmpp
 dj-database-url
 slacker
